
===Additions and enhancements===

To the reproducible documents collection:

* xjtu/mcaseislet: Seislet-based morphological component analysis
  using scale-dependent exponential shrinkage (Yang and Fomel)

To SCons:

To documentation:

To APIs:

To the Python package:

To programs:

* user/zdzhang: New contributor (Zhendong Zhang)

===Bug fixes===

In the reproducible documents collection:

In documentation:

In APIs:

In the Python package:

In programs:

In the build system:

* Fixed installation of the gallery scripts
* Improved configuration for Fortran-90 programs

===Changes in defaults and interfaces===

==Release 1.7 (2014-04-13)==

===Additions and enhancements===

To the reproducible documents collection:

* tccs/sglowrank: Lowrank seismic wave extrapolation on a staggered
  grid (Fang, Fomel, Du, and Hu)
* xjtu/primer: A numerical tour of wave propagation (Yang)
* Moved rsf/usp/data to data/freeusp/land and added elevation statics
* tongji/lrmode: Fast algorithms for elastic-wave-mode separation and
  vector decomposition using low-rank approximation for anisotropic
  media (Cheng and Fomel)
* tccs/deblend: Iterative deblending of simultaneous-source seismic
  data using seislet-domain shaping regularization (Chen, Fomel, and
  Hu)
* tccs/time2depth2: A robust approach to time-to-depth conversion and
  interval velocity estimation from time migration in the presence of
  lateral velocity variations (Li and Fomel)
* tccs/nmodeblend: Deblending using normal moveout and median
  filtering in common-midpoint gathers (Chen, Yuan, Jin, Chen, and
  Zhang)
* tccs/synwav: Time-frequency analysis of seismic data using
  synchrosqueezing wavelet transform (Chen, Liu, Chen, Li, and Wang)
* sep/txamo: The time and space formulation of azimuth moveout (Fomel
  and Biondi)
* jlu/txyapf: Adaptive prediction filtering in t-x-y domain for random
  noise attenuation using regularized nonstationary autoregression
  (Liu, Liu, and Liu)