@@ -1,3 +1,3 @@
 uses=['sfdd', 'sfput', 'sfbyte', 'sfgrey3', 'sfwindow', 'sfgrey', 'sfmath', 'sfcontour']
-data=['agile-geoscience/notebooks/master/data/slicing_seismic.txt']
+data=['https://raw.githubusercontent.com/agile-geoscience/notebooks/master/data/slicing_seismic.txt']
 size=    5110000
