@@ -1,3 +1,3 @@
-uses=['sfspike', 'sfmath', 'sftrapez', 'sfadd', 'sfspectra', 'sfgraph', 'sfwiggle', 'sfgrey', 'sfhpef', 'sfsignoi', 'sfwindow']
+uses=['sfspike', 'sfmath', 'sftrapez', 'sfadd', 'sfspectra', 'sfgraph', 'sfwiggle', 'sfgrey', 'sfhpef', 'sfsignoi', 'sfwindow', 'sffft1', 'sfshift1', 'sfclpf', 'sfstack', 'sfcat', 'sfroots']
 data=[]
-size=      90520
+size=     106264
