@@ -1,3 +1,3 @@
 uses=['sfdd', 'sfclip2', 'sfgrey', 'sflapfill', 'sfscale', 'sfremap1', 'sftransp', 'sfwindow', 'sfplsurf', 'sfadd']
-data=['agile-geoscience/notebooks/master/data/st-helens_before.txt', 'agile-geoscience/notebooks/master/data/st-helens_after.txt']
+data=['https://raw.githubusercontent.com/agile-geoscience/notebooks/master/data/st-helens_before.txt', 'https://raw.githubusercontent.com/agile-geoscience/notebooks/master/data/st-helens_after.txt']
 size=   18895776
